--- a/src/GUI/CustomerHome.form
+++ b/src/GUI/CustomerHome.form
@@ -71,6 +71,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="BROWSE PRODUCTS"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="browseBtnActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="viewOrdersBtn">
       <Properties>
