--- a/src/GUI/ViewProducts.form
+++ b/src/GUI/ViewProducts.form
@@ -181,6 +181,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="ADD TO BASKET"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addBtnActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
