--- a/src/GUI/ViewProducts.form
+++ b/src/GUI/ViewProducts.form
@@ -101,6 +101,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="RETURN TO CUSTOMER HOME"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="returnBtnActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="titleLbl">
       <Properties>
