--- a/src/GUI/ViewOrders.form
+++ b/src/GUI/ViewOrders.form
@@ -56,6 +56,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="RETURN TO CUSTOMER HOME"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="backBtnActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
