Staff Login completed and logic implemented - working on staff home - GUI layout tweaks

--- a/src/GUI/Menu.form
+++ b/src/GUI/Menu.form
@@ -28,23 +28,14 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="167" max="-2" attributes="0"/>
-                      <Component id="menuLbl" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="136" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="staffLoginBtn" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="customerLoginBtn" max="32767" attributes="0"/>
-                              <Component id="viewProductBtn" max="32767" attributes="0"/>
-                          </Group>
-                      </Group>
-                  </Group>
+                  <Component id="menuLbl" max="32767" attributes="0"/>
+                  <Component id="viewProductBtn" alignment="1" max="32767" attributes="0"/>
+                  <Component id="staffLoginBtn" alignment="1" max="32767" attributes="0"/>
+                  <Component id="customerLoginBtn" pref="376" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="140" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -67,6 +58,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="menuLbl">
       <Properties>
+        <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="MAIN MENU"/>
       </Properties>
     </Component>
