--- a/src/GUI/StaffLogin.form
+++ b/src/GUI/StaffLogin.form
@@ -26,22 +26,26 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="titleLbl" max="32767" attributes="0"/>
-                  <Component id="mainMenuBtn" alignment="0" pref="387" max="32767" attributes="0"/>
-                  <Component id="loginBtn" alignment="1" max="32767" attributes="0"/>
-                  <Component id="registerBtn" alignment="1" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="userNameLbl" min="-2" max="-2" attributes="0"/>
+                          <Component id="titleLbl" max="32767" attributes="0"/>
+                          <Component id="loginBtn" alignment="1" max="32767" attributes="0"/>
+                          <Component id="mainMenuBtn" alignment="1" pref="377" max="32767" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="userNameLbl" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="passwordLbl" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="userNameTxtBx" max="32767" attributes="0"/>
                           <Component id="passwordTxtBx" max="32767" attributes="0"/>
+                          <Component id="userNameTxtBx" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -51,8 +55,8 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
               <Component id="titleLbl" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -64,13 +68,11 @@
                   <Component id="passwordLbl" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="passwordTxtBx" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+              <EmptySpace pref="46" max="32767" attributes="0"/>
               <Component id="loginBtn" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="33" max="32767" attributes="0"/>
-              <Component id="registerBtn" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="mainMenuBtn" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -79,7 +81,7 @@
     <Component class="javax.swing.JLabel" name="titleLbl">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="CUSTOMER LOGIN"/>
+        <Property name="text" type="java.lang.String" value="STAFF LOGIN"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="userNameLbl">
@@ -105,13 +107,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="loginBtnActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="registerBtn">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="REGISTER"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="registerBtnActionPerformed"/>
-      </Events>
+    <Component class="javax.swing.JPasswordField" name="passwordTxtBx">
     </Component>
     <Component class="javax.swing.JButton" name="mainMenuBtn">
       <Properties>
@@ -120,8 +116,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mainMenuBtnActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JPasswordField" name="passwordTxtBx">
     </Component>
   </SubComponents>
 </Form>
