Updated DBManager to correct error with save product and added fin next productID method - completed and tested logic on add product and error handling.

--- a/src/GUI/StaffViewProducts.form
+++ b/src/GUI/StaffViewProducts.form
@@ -91,6 +91,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="RETURN TO STAFF HOME"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="backBtnActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="titleLbl">
       <Properties>
